--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <form>
+        <label for="player1">Player 1 Name</label>
+        <input type="text" id="player1" required>
+        <label for="player2">Player 2 Name</label>
+        <input type="text" id="player2" required>
+        <button type="button" id="play">Play</button>
+        <button type="button" id="reset">Reset</button>
+    </form>
     <main></main>
+    <p>Results go here</p>
 </body>
 </html>
