Add disable cells based on state functionality

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         <button type="button" id="reset">Reset</button>
     </form>
     <main></main>
-    <p>Results go here</p>
+    <p>Type in player names and press start to start</p>
 </body>
 </html>
